<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.SignUpActivity"
    style="@style/AuthBackground">


    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/background_content_description"/>


    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubtitle"/>

    <LinearLayout
        android:id="@+id/sign_up_form_linear_layout"
        style="@style/AuthContainer">


            <EditText
                android:id="@+id/email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                style="@style/AuthEditText">
                <requestFocus/>
            </EditText>


            <EditText
                android:id="@+id/username"
                android:hint="@string/prompt_username"
                android:inputType="textPersonName"
                style="@style/AuthEditText"
                />

            <EditText
                android:id="@+id/password"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                style="@style/AuthEditText"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/buttonDivider"
            android:src="@drawable/button_divider"
            android:layout_below="@id/sign_up_form_linear_layout"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/button_divider_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/sign_up_button"
            android:text="@string/sign_up_all_caps_excl"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/buttonDivider"
            android:layout_toStartOf="@+id/buttonDivider"
            android:layout_alignParentStart="true"
            android:layout_marginRight="0dp"
            android:layout_below="@id/sign_up_form_linear_layout"
            style="@style/AuthButton"/>

        <Button
            android:text="@string/cancel_all_caps"
            android:id="@+id/cancelButton"
            android:layout_toRightOf="@id/buttonDivider"
            android:layout_toEndOf="@id/buttonDivider"
            android:layout_marginLeft="0dp"
            android:layout_below="@id/sign_up_form_linear_layout"
            style="@style/AuthButton"/>

</RelativeLayout>